--- a/korimi-110440771/snippets/head-css.liquid
+++ b/korimi-110440771/snippets/head-css.liquid
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="style-theme.css">
+<link rel="stylesheet" type="text/css" href="{{ 'ice9-style-style.css' | asset_url }}">
