--- a/korimi-110440771/snippets/head-css.liquid
+++ b/korimi-110440771/snippets/head-css.liquid
@@ -1,1 +1,8 @@
+<link href='https://fonts.googleapis.com/css?family=Muli:400,300,300italic,400italic' rel='stylesheet' type='text/css'>
+
+<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+
+<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+
 <link rel="stylesheet" type="text/css" href="{{ 'ice9-style-style.css' | asset_url }}">
+
