--- a/korimi-110440771/snippets/head-js.liquid
+++ b/korimi-110440771/snippets/head-js.liquid
@@ -1,1 +1,13 @@
-{% comment %}head-js.liquid{% endcomment %}
+{{ 'https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js' | script_tag }}
+
+{{ "//cdn.shopify.com/s/javascripts/currencies.js" | script_tag }}
+
+{{ "jquery.currencies.min.js" | asset_url | script_tag }}
+
+{{ 'ice9-javascript-javaScript-cookie.js' | asset_url | script_tag }}
+
+{{ 'ice9-javascript-jQueryCycle-2.js' | asset_url | script_tag }}
+
+{{ 'ice9-javascript-instafeed.js' | asset_url | script_tag }}
+
+{{ 'https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js' | script_tag }}
