--- a/korimi-110440771/snippets/ice9-header.liquid
+++ b/korimi-110440771/snippets/ice9-header.liquid
@@ -98,6 +98,8 @@
 
 						</ul>
 
+						{% include 'ice9-currency-picker' %}
+
 					</div>
 
 					<div class="menu-columnas"><a href="/checkout">Proceder al pago</a></div>
